--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
+    "@hookform/resolvers": "^2.8.5",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
+    "axios": "^0.24.0",
+    "date-fns": "^2.27.0",
     "next": "latest",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.21.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
